--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,43 +16,33 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-			<header id="header">
-				<h1 id="logo"><a href="index.html">당신의 여행파트너, YZ Tour</a></h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">메인</a></li>
-						<li>
-							<a href="#">예약하기</a>
-							<ul>
-								<li><a href="local.html">국내패키지상품</a></li>
-								<li><a href="overseas.html">해외패키지상품</a></li>
-								<li>
-									<a href="#">Submenu</a>
-									<ul>
-										<li><a href="#">Option 1</a></li>
-										<li><a href="#">Option 2</a></li>
-										<li><a href="#">Option 3</a></li>
-										<li><a href="#">Option 4</a></li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-						<li>
-							<a href="mypage.html">마이페이지</a>
-							<ul>
-								<li><a href="#">내가입정보</a></li>
-								<li><a href="#">내가 쓴글</a></li>
-								<li><a href="#">예약확인 / 취소</a></li>
-							</ul>
-						</li>
-						<li>
-							<a href="notice.html">고객게시판</a>
-						</li>
-						<li><a href="login.html" class="button primary small">로그인</a></li>
-						<li><a href="join.html" class="button primary small">회원가입</a></li>
-					</ul>
-				</nav>
-			</header>
+				<header id="header">
+					<h1 id="logo"><a href="index.html">당신의 여행파트너, YZ Tour</a></h1>
+					<nav id="nav">
+						<ul>
+							<li><a href="index.html">메인</a></li>
+							<li>
+								<a href="#">예약하기</a>
+								<ul>
+									<li><a href="left-sidebar.html">국내패키지상품</a></li>
+									<li><a href="right-sidebar.html">해외패키지상품</a></li>
+									<li>
+										<a href="#">Submenu</a>
+										<ul>
+											<li><a href="#">Option 1</a></li>
+											<li><a href="#">Option 2</a></li>
+											<li><a href="#">Option 3</a></li>
+											<li><a href="#">Option 4</a></li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+							<li><a href="mymenu.html">마이메뉴</a></li>
+							<li><a href="login.html" class="button primary">로그인</a></li>
+							<li><a href="join.html" class="button primary">회원가입</a></li>
+						</ul>
+					</nav>
+				</header>
 
 			<!-- Banner -->
 				<section id="banner">
@@ -133,7 +123,7 @@
 						<header>
 							<h2>Q&A게시판</h2>
 							<p>여행관련 문의 게시판입니다</p>
-							자주찾는질문<br/>1:1게시판 <br/><br/>
+							자주찾는질문<br/>1:1게시판 <br/>
 						</header>
 						<p>This is a travel inquiry bulletin board We'll give you a quick answer.</p>
 						<ul class="actions">
@@ -201,12 +191,8 @@
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>(주) YZ Tour</li>
-						<li>대표자 : 권예지</li>
-						<li>☎ TEL 010-7129-3630</li><br/><br/>
+						<li>&copy; Untitled. All rights reserved.</li><li>대표자 : 권예지</li><li>☎ TEL 010-7129-3630</li><br/><br/>
 						<li>본사주소 : 서울시 강남대로 1000억빌딩 YZ투어</li>
-						<li>사업자등록번호 : 000-81-00000</li><br/><br/>
-						<li>Copyright&copy; YZ TOUR service Inc. All rights reserved.</li>
 					</ul>
 				</footer>
 
