--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -110,7 +110,7 @@ input, select, textarea {
 		-webkit-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		border-bottom: dotted 1px;
+
 		color: #e44c65;
 		text-decoration: none;
 	}
@@ -118,6 +118,7 @@ input, select, textarea {
 		a:hover {
 			color: #e44c65 !important;
 			border-bottom-color: transparent;
+			border-bottom: dotted 1px;
 		}
 
 	strong, b {
@@ -186,7 +187,8 @@ input, select, textarea {
 	hr {
 		border: 0;
 		border-bottom: solid 1px rgba(255, 255, 255, 0.3);
-		margin: 3em 0;
+		margin: 1em 0;
+		width : 60%;
 	}
 
 		hr.major {
@@ -195,7 +197,7 @@ input, select, textarea {
 
 	blockquote {
 		border-left: solid 4px rgba(255, 255, 255, 0.3);
-		font-style: italic;
+		font-style: ;
 		margin: 0 0 2em 0;
 		padding: 0.5em 0 0.5em 2em;
 	}
