--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -2287,7 +2287,7 @@ input, select, textarea {
 	input[type="password"],
 	input[type="email"],
 	select {
-		height: 3em;
+		height: 2.5em;
 	}
 
 	textarea {
@@ -2760,8 +2760,10 @@ input, select, textarea {
 	}
 
 	table {
-		margin: 0 0 2em 0;
+		/*margin: 0 0 2em 0;*/
 		width: 100%;
+		margin-left:20;
+        margin-right:20;
 	}
 
 		table tbody tr {
@@ -2775,7 +2777,7 @@ input, select, textarea {
 			}
 
 		table td {
-			padding: 0.75em 0.75em;
+			padding: 0.25em 0.75em;
 		}
 
 		table th {
@@ -3631,7 +3633,7 @@ input, select, textarea {
 		/* Wrapper */
 
 			.wrapper {
-				padding: 4.5em 0 2.5em 0;
+				padding: 0.5em 0 2.5em 0; /*수정함 원래 4.5em 0 2.5em 0;였음*/
 			}
 
 		/* Dropotron */
