--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -110,7 +110,7 @@ input, select, textarea {
 		-webkit-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
-
+		border-bottom: dotted 1px;
 		color: #e44c65;
 		text-decoration: none;
 	}
@@ -118,7 +118,6 @@ input, select, textarea {
 		a:hover {
 			color: #e44c65 !important;
 			border-bottom-color: transparent;
-			border-bottom: dotted 1px;
 		}
 
 	strong, b {
@@ -187,8 +186,7 @@ input, select, textarea {
 	hr {
 		border: 0;
 		border-bottom: solid 1px rgba(255, 255, 255, 0.3);
-		margin: 1em 0;
-		width : 60%;
+		margin: 3em 0;
 	}
 
 		hr.major {
@@ -197,7 +195,7 @@ input, select, textarea {
 
 	blockquote {
 		border-left: solid 4px rgba(255, 255, 255, 0.3);
-		font-style: ;
+		font-style: italic;
 		margin: 0 0 2em 0;
 		padding: 0.5em 0 0.5em 2em;
 	}
@@ -2287,7 +2285,7 @@ input, select, textarea {
 	input[type="password"],
 	input[type="email"],
 	select {
-		height: 2.5em;
+		height: 3em;
 	}
 
 	textarea {
@@ -2760,10 +2758,8 @@ input, select, textarea {
 	}
 
 	table {
-		/*margin: 0 0 2em 0;*/
+		margin: 0 0 2em 0;
 		width: 100%;
-		margin-left:20;
-        margin-right:20;
 	}
 
 		table tbody tr {
@@ -2777,7 +2773,7 @@ input, select, textarea {
 			}
 
 		table td {
-			padding: 0.25em 0.75em;
+			padding: 0.75em 0.75em;
 		}
 
 		table th {
@@ -3061,8 +3057,7 @@ input, select, textarea {
 		}
 
 		.spotlight:before {
-
-			background-attachment: fixed;
+			background-image: url("images/overlay.png");
 			content: '';
 			display: block;
 			height: 100%;
@@ -3203,12 +3198,10 @@ input, select, textarea {
 
 	.wrapper {
 		padding: 6em 0 4em 0;
-
 	}
 
 		.wrapper.style2 {
 			background: #e44c65;
-
 		}
 
 			.wrapper.style2 input[type="text"]:focus,
@@ -3456,85 +3449,87 @@ input, select, textarea {
 
 /* Banner */
 
-	#banner {
-		background-attachment: fixed;
-		background-color: #272833;
-		background-image: url("../../images/Airplane.gif");
-		background-position: center center;
-		background-size: cover;
-		box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
-		min-height: 100vh;
-		position: relative;
-		text-align: center;
-		z-index: 21;
-	}
 
-		#banner:before {
-			content: '';
-			display: inline-block;
-			height: 100vh;
-			vertical-align: middle;
-			width: 1%;
-		}
+    #banner {
+    		background-attachment: fixed;
+    		background-color: #272833;
+    		background-image: url("../../images/Airplane.gif");
+    		background-position: center center;
+    		background-size: cover;
+    		box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
+    		min-height: 100vh;
+    		position: relative;
+    		text-align: center;
+    		z-index: 21;
+    	}
 
-		#banner:after {
-			#background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			#background-image: -webkit-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			#background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			#background-image: linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			content: '';
-			display: block;
-			height: 100%;
-			left: 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
-		}
+    		#banner:before {
+    			content: '';
+    			display: inline-block;
+    			height: 100vh;
+    			vertical-align: middle;
+    			width: 1%;
+    		}
 
-		#banner .content {
-			display: inline-block;
-			margin-right: 1%;
-			max-width: 95%;
-			padding: 6em;
-			position: relative;
-			text-align: right;
-			vertical-align: middle;
-			z-index: 1;
-		}
+    		#banner:after {
+    			#background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
+    			#background-image: -webkit-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
+    			#background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
+    			#background-image: linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
+    			content: '';
+    			display: block;
+    			height: 100%;
+    			left: 0;
+    			position: absolute;
+    			top: 0;
+    			width: 100%;
+    		}
 
-			#banner .content header {
-				display: inline-block;
-				vertical-align: middle;
-			}
+    		#banner .content {
+    			display: inline-block;
+    			margin-right: 1%;
+    			max-width: 95%;
+    			padding: 6em;
+    			position: relative;
+    			text-align: right;
+    			vertical-align: middle;
+    			z-index: 1;
+    		}
 
-				#banner .content header h2 {
-					font-size: 2.5em;
-					margin: 0;
-				}
+    			#banner .content header {
+    				display: inline-block;
+    				vertical-align: middle;
+    			}
 
-				#banner .content header p {
-					margin: 0.5em 0 0 0;
-					top: 0;
-				}
+    				#banner .content header h2 {
+    					font-size: 2.5em;
+    					margin: 0;
+    				}
 
-			#banner .content .image {
-				border-radius: 100%;
-				display: inline-block;
-				height: 18em;
-				margin-left: 3em;
-				vertical-align: middle;
-				width: 18em;
-			}
+    				#banner .content header p {
+    					margin: 0.5em 0 0 0;
+    					top: 0;
+    				}
 
-				#banner .content .image img {
-					border-radius: 100%;
-					display: block;
-					width: 100%;
-				}
+    			#banner .content .image {
+    				border-radius: 100%;
+    				display: inline-block;
+    				height: 18em;
+    				margin-left: 3em;
+    				vertical-align: middle;
+    				width: 18em;
+    			}
 
-	body.is-touch #banner {
-		background-attachment: scroll;
-	}
+    				#banner .content .image img {
+    					border-radius: 100%;
+    					display: block;
+    					width: 100%;
+    				}
+
+    	body.is-touch #banner {
+    		background-attachment: scroll;
+    	}
+
 
 /* Footer */
 
@@ -3633,7 +3628,7 @@ input, select, textarea {
 		/* Wrapper */
 
 			.wrapper {
-				padding: 0.5em 0 2.5em 0; /*수정함 원래 4.5em 0 2.5em 0;였음*/
+				padding: 4.5em 0 2.5em 0;
 			}
 
 		/* Dropotron */
@@ -4089,6 +4084,7 @@ input, select, textarea {
 		/* Wrapper */
 
 			.wrapper {
+				padding: 3em 1.25em 1em 1.25em;
 				padding: 3em 1.25em 1em 1.25em;
 			}
 
