--- a/src/main/resources/templates/reserve.html
+++ b/src/main/resources/templates/reserve.html
@@ -40,12 +40,14 @@
 												<section>
 													<h6>#베트남다낭</h6>
 													<p><span class="image left"><img src="images/danang.jpg" alt="" /></span>
-													<span class="image left"><img src="images/danang2.jpg" alt="" /></span></p><br/>
+														<span class="image left"><img src="images/danang2.jpg" alt="" /></span>
+														<span class="image left"><img src="images/oldtown.jpg" alt="" /></span>
+														<span class="image left"><img src="images/dragonbridge.jpg" alt="" /></span></p><br/>
 												</section>
 												<span>베트남다낭 / 3박4일 / 호텔4성급 / 쇼핑3회 / 가이드있음 / #관광</span>
 												<span>#미케비치/ #다나힐 / #호이안 / #올드타운 / #다낭대성당</span>
 
-												<div class="btn_tab_image" id="btn_tab_image">
+												<div class="btn_tab_image" id="btn_tab_image1">
 													<a href="#" onclick="foldLeftmenu();" class="button small">가능예약일보기</a>
 												</div>
 											</div>
@@ -56,12 +58,14 @@
 											<section>
 												<h6>#일본 오사카</h6>
 												<p><span class="image left"><img src="images/osaka.jpg" alt="" /></span>
-													<span class="image left"><img src="images/osakacastle.jpg" alt="" /></span></p><br/>
+													<span class="image left"><img src="images/osakacastle.jpg" alt="" /></span>
+													<span class="image left"><img src="images/univarsal.jpg" alt="" /></span>
+													<span class="image left"><img src="images/tsutenkaku.jpg" alt="" /></span></p><br/>
 											</section>
 											<span>일본 오사카 / 3박4일 / 호텔4성급 / 쇼핑4회 / 가이드있음 / #관광</span>
 											<span>#오사카성/ #유니버셜스튜디오 / #도톤보리 / #가이유칸 / #쓰텐가쿠</span>
 
-											<div class="btn_tab_image" id="btn_tab_image">
+											<div class="btn_tab_image" id="btn_tab_image2">
 												<a href="#" onclick="foldLeftmenu();" class="button small">가능예약일보기</a>
 											</div>
 										</div>
@@ -72,12 +76,14 @@
 											<section>
 												<h6>#필리핀 보라카이</h6>
 												<p><span class="image left"><img src="images/bora.jpg" alt="" /></span>
-													<span class="image left"><img src="images/boracaybeach.jpg" alt="" /></span></p><br/>
+													<span class="image left"><img src="images/boracaybeach.jpg" alt="" /></span>
+													<span class="image left"><img src="images/dmall.jpg" alt="" /></span>
+													<span class="image left"><img src="images/willysrock.jpg" alt="" /></span></p><br/>
 											</section>
 											<span>필리핀 보라카이 / 1주일 / 호텔4성급 / 쇼핑7회 / 가이드있음 / #관광</span>
 											<span>#화이트비치/ #아리엘포인트 / #푸카쉘비치 / #윌리스락 / #디몰</span>
 
-											<div class="btn_tab_image" id="btn_tab_image">
+											<div class="btn_tab_image" id="btn_tab_image3">
 												<a href="#" onclick="foldLeftmenu();" class="button small">가능예약일보기</a>
 											</div>
 										</div>
@@ -88,12 +94,14 @@
 											<section>
 												<h6>#싱가포르</h6>
 												<p><span class="image left"><img src="images/singapore.jpg" alt="" /></span>
-													<span class="image left"><img src="images/gardenbythebay.jpg" alt="" /></span></p><br/>
+													<span class="image left"><img src="images/gardenbythebay.jpg" alt="" /></span>
+													<span class="image left"><img src="images/museum.jpg" alt="" /></span>
+													<span class="image left"><img src="images/orchardroad.jpg" alt="" /></span></p><br/>
 											</section>
 											<span>싱가포르 / 4박5일 / 호텔5성급 / 쇼핑4회 / 가이드있음 / #관광</span>
 											<span>#가든스 바이 더베이/ #보타닉가든 / #오차드로드 / #아트사이언스 뮤지엄</span>
 
-											<div class="btn_tab_image" id="btn_tab_image">
+											<div class="btn_tab_image" id="btn_tab_image4">
 												<a href="#" onclick="foldLeftmenu();" class="button small">가능예약일보기</a>
 											</div>
 										</div>
@@ -104,7 +112,9 @@
 											<section>
 												<h6>#괌</h6>
 												<p><span class="image left"><img src="images/guam.jpg" alt="" /></span>
-													<span class="image left"><img src="images/guamcliff.jpg" alt="" /></span></p><br/>
+													<span class="image left"><img src="images/guamcliff.jpg" alt="" /></span>
+													<span class="image left"><img src="images/guam2.jpg" alt="" /></span>
+													<span class="image left"><img src="images/charmorro.jpg" alt="" /></span></p><br/>
 											</section>
 											<span>괌 / 1주일 / 호텔5성급 / 쇼핑7회 / 가이드있음 / #관광</span>
 											<span>#이파오비치 공원/ #차모르 야시장 / #사랑의절벽 / #투몬비치</span>
