--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -101,7 +101,7 @@
 										<div class="third" style="width:32%; float:right;  box-sizing: border-box;">
 											<span class="button small" style="padding:0 0.5em 0.5em 0.5em; " onclick="alert('다음 페이지가 없습니다.');"> > </span>
 										</div>
-									</div><br/><br/><br/><br/>
+									</div><br/><br/><br/>
 
 									<div class="container">
 										<div style="margin:auto;width:50%;">
@@ -121,7 +121,7 @@
 												</table>
 											</form>
 										</div>
-									</div><br/><br/>
+									</div>
 									<div style="float:right;">
 										<a href="/board/write" class="button primary small" >글쓰기</a>
 									</div>
