--- a/src/main/resources/templates/overseas.html
+++ b/src/main/resources/templates/overseas.html
@@ -56,7 +56,7 @@
 								<section>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform" >
-											 <div class="col-4 col-6-xsmall" style="float:left; width:20%;"><a href="/reserve" title="클릭하시면 예약사이트로 이동합니다"><span class="image fit" style="border-radius:100px;"><img src="images/danang.jpg" alt="" /></span></a></div>
+											 <div class="col-4 col-6-xsmall" style="float:left; width:20%;"><a href="/calendar" title="클릭하시면 예약사이트로 이동합니다"><span class="image fit" style="border-radius:100px;"><img src="images/danang.jpg" alt="" /></span></a></div>
 											<div class="col-4 col-6-xsmall" style="float:left; width:20%;"><a href="/reserve" title="클릭하시면 예약사이트로 이동합니다"><span class="image fit" style="border-radius:100px;"><img src="images/osaka.jpg" alt="" /></span></a></div>
 											<div class="col-4 col-6-xsmall" style="float:left; width:20%;" ><a href="/reserve" title="클릭하시면 예약사이트로 이동합니다"><span class="image fit" style="border-radius:100px;"><img src="images/bora.jpg" alt="" /></span></a></div>
 											<div class="col-4 col-6-xsmall" style="float:right; width:20%;"><a href="/reserve" title="클릭하시면 예약사이트로 이동합니다"><span class="image fit" style="border-radius:100px;"><img src="images/singapore.jpg" alt="" /></span></a></div>
@@ -114,7 +114,7 @@
 													카카오톡 상담 (카카오톡 ID: YZ Tour)</h4>
 												<h5>If you contact us on Kakao Talk, you can consult more quickly</h5>
 											</section>
-											<section class="col-4 col-4-medium col-5-xsmall"style="width:33%; float:left;">
+											<section class="col-4 col-4-medium col-5-xsmall" style="width:33%; float:left;">
 												<span class="icon solid alt major fa-comment"></span>
 												<p><a href="/board">고객게시판</a></p>
 												<h4>고객게시판<br/></h4>
