--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
+<th:block th:fragment="calendarFragment">
 <head>
-    <title>FullCalendar by Creative Tim </title>
-
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 
-<link href='assets/css/fullcalendar.css' rel='stylesheet' />
-<link href='assets/css/fullcalendar.print.css' rel='stylesheet' media='print' />
-<script src='assets/js/jquery-1.10.2.js' type="text/javascript"></script>
-<script src='assets/js/jquery-ui.custom.min.js' type="text/javascript"></script>
-<script src='assets/js/fullcalendar.js' type="text/javascript"></script>
+<link href='/calendar/assets/css/fullcalendar.css' rel='stylesheet' />
+<link href='/calendar/assets/css/fullcalendar.print.css' rel='stylesheet' media='print' />
+<script src='/calendar/assets/js/jquery-1.10.2.js' type="text/javascript"></script>
+<script src='/calendar/assets/js/jquery-ui.custom.min.js' type="text/javascript"></script>
+<script src='/calendar/assets/js/fullcalendar.js' type="text/javascript"></script>
 <script>
 
 	$(document).ready(function() {
@@ -240,4 +239,5 @@
 
 
 </body>
+</th:block>
 </html>
