--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/layout">
 <th:block layout:fragment="content">
+	<head>
+		<title>YZ Tour : 마이페이지 </title>
+	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
 			<!-- Header -->
