--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,14 +14,14 @@
 								Just one click, you can travel Everywhere <br>
 								Make a reservation Right Now ! Let's go traveling.</p>
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image"><img src="/images/pic01.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/indoor.jpg" alt="" /></span>
+					<span class="image fit main"><img src="/images/indoor.jpg" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
@@ -32,7 +32,7 @@
 										<h5>#첫 배낭여행 #부모님효도여행 #허니문 </h5><br/>
 									</header>
 									<ul class="actions">
-										<li><a href="overseas.html" class="button">해외여행 예약하러가기</a></li>
+										<li><a href="/overseas" class="button">해외여행 예약하러가기</a></li>
 									</ul>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -70,7 +70,7 @@
 						</p>
 						<p>#여행의 첫시작?국내여행부터#핫플레이스 #제주</p>
 						<ul class="actions">
-							<li><a href="local.html" class="button">국내여행 예약하러가기</a></li>
+							<li><a href="/local" class="button">국내여행 예약하러가기</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -87,7 +87,7 @@
 						</header>
 						<p>This is a travel inquiry bulletin board We'll give you a quick answer.</p>
 						<ul class="actions">
-							<li><a href="board.html" class="button">Q&A남기기</a></li>
+							<li><a href="/board" class="button">Q&A남기기</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -102,22 +102,30 @@
 						</header>
 						<div class="box alt">
 							<div class="row gtr-uniform">
-								<section class="col-4 col-4-medium col-5-xsmall">
+								<section class="col-4 col-4-medium col-5-xsmall" style="width:25%; float:left;">
 									<span class="icon solid alt major fa-comment"></span>
-									<p style="color:#e44c65;">Kakao Talk</p>
-									<h6>카카오톡 상담 (카카오톡 ID: YZ Tour)<br/>
-										If you contact us on Kakao Talk, you can consult more quickly</h6>
+									<p>대표전화</p>
+									<h5>대표전화 : 1588-0000 / 010-7129-3630<br/>
+										(24시 상담이 가능합니다)</h5>
+									<h6>You can get counseling as soon as possible</h6>
 								</section>
-								<section class="col-4 col-4-medium col-5-xsmall">
-									<span class="icon solid alt major fa-paper-plane"></span>
-									<p><a href="" onclick="alert('이메일 tok_o@naver.com 로 이메일 발신부탁드립니다.');">E-mail</a></p>
-									<h6>이메일보내기<br/>
-										Contact us by E-mail</h6>
+								<section class="col-4 col-4-medium col-5-xsmall" style="width:25%; float:left;">
+									<span class="icon solid alt major fa-comment"></span>
+									<p>카카오톡</p>
+									<h5>카카오톡 상담 (카카오톡 ID: YZ Tour)</h5>
+									<h6>If you contact us on Kakao Talk, you can consult more quickly</h6>
 								</section>
-								<section class="col-4 col-4-medium col-5-xsmall">
+								<section class="col-4 col-4-medium col-5-xsmall" style="width:25%; float:left;">
 									<span class="icon solid alt major fa-lock"></span>
-									<p><a href="mypage.html">회원탈퇴</a></p>
-									<h6>회원을 탈퇴합니다<br/>withdraw from the membership</h6>
+									<p><a href="/board" title="고객게시판으로 이동합니다">고객게시판</a></p>
+									<h5>고객게시판 상담</h5>
+									<h6>Please contact us by customer board </h6>
+								</section>
+								<section class="col-4 col-4-medium col-5-xsmall" style="width:25%; float:left;">
+									<span class="icon solid alt major fa-paper-plane"></span>
+									<p><a href="#none" onclick="alert('이메일 tok_o@naver.com 로 이메일 발신부탁드립니다.');">E-mail</a></p>
+									<h5>이메일보내기</h5>
+									<h6>Contact us by E-mail</h6>
 								</section>
 							</div>
 						</div>
