--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,17 +6,15 @@
 </head>
 <body class="is-preload">
     <div id="page-wrapper">
-        <!-- Header -->
-
         <!-- Main -->
         <div id="main" class="wrapper style1">
-            <div class="container" align="center">
+            <div class="container" align="center" style="background:#29292e;border-radius:50px;"><br/>
                 <header class="major">
-                    <h2 style="margin:0;">로그인</h2>
+                <h2 style="margin:0;">로그인</h2>
                 </header><br/>
                             <form action="index" method="post">
-                                <input type="text" name="id" size="2" placeholder="아이디를 입력하세요" maxlength="10" style="width:40%" required>
-                                <input type="password" name="pwd" size="2" placeholder="비밀번호 8자리를 입력하세요" maxlength="8" style="width:40%" required><br/>
+                                <input type="text" name="id" size="2" placeholder="아이디를 입력하세요" maxlength="10" style="width:40%;" required>
+                                <input type="password" name="pwd" size="2" placeholder="비밀번호 8자리를 입력하세요" maxlength="8" style="width:40%;" required><br/>
 
                                 <div class="col-6 col-12-medium">
                                     <input type="checkbox" id="human" name="human" checked>
@@ -24,40 +22,12 @@
                                 </div><br/>
                                 <input class="button primary small" type="submit" value="로그인" >
                                 <input type="button" class="button small" value="취소" onclick="history.back(-1);">
-
                             </form>
                             <a href="">아이디 찾기</a> ㅣ
                             <a href="">비밀번호 찾기</a> ㅣ
-                            <a href="">회원가입</a>
-                    <!--<div class="col-4 col-12-medium">
-                         Sidebar
-                            <section id="sidebar">
-                                <section>
-                                    <h3>이달의 베스트 </h3>
-                                    <p>Sed sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
-                                    <footer>
-                                        <ul class="actions">
-                                            <li><a href="#" class="button">Learn More</a></li>
-                                        </ul>
-                                    </footer>
-                                </section>
-                                <hr />
-                                <section>
-                                    <a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-                                    <h3>Amet Lorem Tempus</h3>
-                                    <p>Sed tristiquee purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-                                    <footer>
-                                        <ul class="actions">
-                                            <li><a href="#" class="button">Learn More</a></li>
-                                        </ul>
-                                    </footer>
-                                </section>
-                            </section>
-                    </div>-->
-            </div>
+                            <a href="">회원가입</a><br/><br/><br/>
+            </div><br/><br/><br/><br/>
         </div>
-
-        <!-- Footer -->
     </div>
 </body>
 </th:block>
