--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -38,7 +38,7 @@
 															<input type="text" name="title" id="title" value="" placeholder="제목을 입력하세요" required/>
 														</div>　
 														<div class="col-12" style="width:60%;" >
-															<textarea name="content" id="content" rows="6"  placeholder="내용을 입력하세요" required></textarea>
+															<textarea name="content" id="content" rows="6"  placeholder="내용을 입력하세요"  style="resize:none;" required></textarea>
 														</div>
 														<div class="col-6 col-12-medium">
 															<input type="checkbox" id="pub" name="pub">
@@ -48,7 +48,7 @@
 
 
 														<div class="col-12">
-															<ul class="actions" >
+															<ul class="actions" style="margin-left:12em;">
 																<li><input type="submit" value="글쓰기" name="write" class="button primary small" /></li>
 																<li><input type="button" class="button small" value="취소" onclick="history.back(-1);"></li>
 															</ul>
