--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -111,7 +111,7 @@ input, select, textarea {
 		-ms-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 
-		color: #e44c65;
+		color: rgba(255, 255, 255, 0.75);  /*수정함 원래색 #e44c65이었음*/
 		text-decoration: none;
 	}
 
@@ -2524,7 +2524,7 @@ input, select, textarea {
 			position: absolute;
 			left: 0;
 			top: 0;
-			/*background-image: url("images/overlay.png"); 삭제한걸로 수정함 */
+			/*background-image: url("/images/airportgirl.jpg");*/
 			width: 100%;
 			height: 100%;
 			z-index: 1;
@@ -3202,7 +3202,7 @@ input, select, textarea {
 	}
 
 		.wrapper.style2 {
-			background: #e44c65;
+			background: #664d51;   /*수정함 원래 #e44c65 였음*/
 		}
 
 			.wrapper.style2 input[type="text"]:focus,
