--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/layout">
+<head>
+	<title>YZ Tour : 고객게시판</title>
+	<!--<link rel="stylesheet" href="/assets/css/bootstrap.min.css"/>-->
+</head>
 <th:block layout:fragment="content">
 	<body class="is-preload">
 		<div id="page-wrapper">
-			<!-- Header -->
-
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
@@ -13,37 +15,41 @@
 						</header><br/>
 								<!-- Contents -->
 						<div class="col-8 col-12-medium imp-medium" >
-						<blockquote style="padding:0; margin-left: 10em;"><h4>　고객게시판 > 게시글작성</h4></blockquote><br/><br/>
+						<blockquote style="padding:0; margin-left: 10em;"><h4>　고객게시판 > 작성한 글</h4></blockquote><br/>
 							<section>
 								<form action="/mypage/mylist" method="get">
 									<div class="row gtr-uniform gtr-50" style="margin-left:15em; width:1400px;">
-										<div class="col-12" style="width:25%">
-											<select name="category" id="category">
-												<option value="">- 카테고리 선택-</option>
-												<option value="1">예약확인/취소</option>
-												<option value="1">마이페이지</option>
-												<option value="1">기타문의</option>
-											</select>
-										</div>
-										<div class="col-6 col-12-xsmall" style="width:15%">
-											<input type="text" name="writerId" id="writerId" value="" placeholder="작성자" />
-										</div>
-										<div class="col-6 col-12-xsmall" style="width:15%">
-											<input type="file" name="file" id="file" value="" />
-										</div>
-										<div class="col-6 col-12-xsmall" style="width:60%">
-											<input type="text" name="title" id="title" value="" placeholder="제목을 입력하세요" />
-										</div>　
-										<div class="col-12" style="width:60%;" >
-											<textarea name="content" id="content" rows="6"  placeholder="내용을 입력하세요"></textarea>
-										</div>
+										<section>
+											<div class="table-wrapper">
+												<table class="alt" style="width:830px;">
+													<tbody>
+														<tr>
+															<td style="background:#322f30;text-align:center;">카테고리</td>
+															<td style="background:#2d2f32;">　　　　　　</td>
+															<td style="background:#322f30;text-align:center;">작성자</td>
+															<td style="background:#2d2f32;">워니</td>
+															<td style="background:#322f30;text-align:center;">첨부파일</td>
+															<td colspan="2" style="background:#2d2f32;">없음</td>
+														</tr>
+														<tr>
+															<td style="background:#322f30;text-align:center;">제목</td>
+															<td colspan="6" style="text-align:center;background:#2d2f32;">카피바라여</td>
+														</tr>
+														<tr>
+															<td style="background:#322f30;text-align:center;">내용</td>
+															<td colspan="6" style="text-align:center;height:20em;background:#2d2f32;">영원하라!!!!</td>
+														</tr>
+													</tbody>
+												</table>
+											</div>
+										</section>
 										<div class="col-6 col-12-medium">
-											<input type="checkbox" id="pub" name="pub">
+											<input type="checkbox" id="pub" name="pub" checked>
 											<label for="pub">비공개</label>
 										</div><br/><br/><br/><br/>
 
 										<div class="col-12">
-											<ul class="actions" style="float:center;">
+											<ul class="actions" style="margin-left:10em;">
 												<li><input type="submit" value="수정" name="write" class="button primary small" /></li>
 												<li><input type="submit" value="삭제" name="write" class="button primary small" onclick="confirm('삭제하시겠습니까?')"/></li>
 												<li><a href="/board" class="button small">목록</a></li>
@@ -52,6 +58,42 @@
 									</div>
 								</form>
 							</section>
+							<hr style="height:3px;background:#ccc;width:80%;margin-left:9em;"/><br/>
+							<section style="width:70%;margin-left:12em;">
+								<form action="/board/detail" method="post">
+									<textarea placeholder="댓글을 달아주세요" id="comment" name="comment" maxlength="150" style="height: 150px; resize:none;"></textarea><br/>
+									<input type="submit" class="button small" name="comment" value="작성" style="float:right;"/>
+								</form><br/>
+
+								<h3># 댓글 #</h3>
+								<ul class="alt">
+									<li>앗싸 1빠!!ㅋㅋㅋㅋㅋㅋㅋ       ㅣ 2022/12/02/01:31</li>
+									<li>아 빨리 포폴완성하고싶다       ㅣ 2022/12/02/01:31</li>
+									<li>혼자서 다하려니 빡세구나..       ㅣ 2022/12/02/01:31</li>
+									<li>파이팅 포기하지말자       ㅣ 2022/12/02/01:31</li>
+									<li>취업고고씽~~~~~~~~~~!!!       ㅣ 2022/12/02/01:31</li>
+								</ul>
+							</section><br/>
+
+							<hr style="width:80%;margin-left:9em;"/>
+							<!--<div style="margin:1em;width:70%;margin-left:12em;">
+								<span>다음 글이 없습니다.</span>
+								<hr style="margin:1em;"/>
+								<span><a href="#none">이전글이 보여지는 영역입니다></a></span>
+							</div>-->
+							<table class="table border-top-default" style="width:70%;margin-left:12em;">
+							<tbody>
+							<tr>
+								<th>▲ 다음글</th>
+								<td colspan="3">다음글이 없습니다.</td>
+							</tr>
+							<tr>
+								<th>▼ 이전글</th>
+								<td colspan="3"><a href="">이전글이 보여지는 영역입니다.</a></td>
+							</tr>
+							</tbody>
+							</table>
+
 						</div>
 					</div>
 				</div>
