--- a/src/main/resources/templates/overseas.html
+++ b/src/main/resources/templates/overseas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/layout">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	  layout:decorate="layout/layout" xmlns="http://www.w3.org/1999/html">
 <th:block layout:fragment="content">
 	<head>
 		<title>YZ Tour : 해외여행예약</title>
@@ -103,30 +104,31 @@
 									</div>
 								</section><br/><br/><hr/>
 								<section>
-									<h3>여행패키지 빠른상담</h3><br/>
-									<div class="box alt" style="margin-left:10em;">
+									<h3>여행패키지 빠른상담</h3><br/><br/>
+									<div class="box alt" style="text-align:center;background:#29292e;border-radius:50px;">
 										<div class="row gtr-uniform">
-											<section class="col-4 col-4-medium col-5-xsmall" style="width:33%; float:left;">
-												<span class="icon solid alt major fa-comment"></span>
-												<p style="color:#e44c65;">Kakao Talk</p>
-												<h4>대표전화 : 1588-0000 / 010-7129-3630<br/>
-													(24시 상담이 가능합니다) <br/><br/>
-													카카오톡 상담 (카카오톡 ID: YZ Tour)</h4>
+											<section class="col-4 col-4-medium col-5-xsmall" style="width:25%; float:left;">
+												<span class="icon solid alt major fa-comment" style="background:#484542;"></span>
+												<h5>대표전화 : 1588-0000 / 010-7129-3630<br/>
+													(24시 상담이 가능합니다)</h5>
+												<h5>You can get counseling as soon as possible</h5>
+											</section>
+											<section class="col-4 col-4-medium col-5-xsmall" style="width:25%; float:left;">
+												<span class="icon solid alt major fa-comment" style="background:#484542;"></span>
+												<h5>카카오톡 상담 (카카오톡 ID: YZ Tour)</h5>
 												<h5>If you contact us on Kakao Talk, you can consult more quickly</h5>
 											</section>
-											<section class="col-4 col-4-medium col-5-xsmall" style="width:33%; float:left;">
-												<span class="icon solid alt major fa-comment"></span>
-												<p><a href="/board">고객게시판</a></p>
-												<h4>고객게시판<br/></h4>
+											<section class="col-4 col-4-medium col-5-xsmall" style="width:25%; float:left;">
+												<span class="icon solid alt major fa-lock" style="background:#484542;"></span>
+												<p><a href="/board" title="고객게시판으로 이동합니다" style="color:white;">고객게시판</a></p>
 												<h5>Please contact us by customer board </h5>
 											</section>
-											<section class="col-4 col-4-medium col-5-xsmall" style="width:33%; float:left;">
-												<span class="icon solid alt major fa-paper-plane"></span>
-												<p><a href="" onclick="alert('이메일 tok_o@naver.com 로 이메일 발신부탁드립니다.');">E-mail</a></p>
-												<h4>이메일보내기<br/></h4>
-													<h5>Contact us by E-mail</h5>
+											<section class="col-4 col-4-medium col-5-xsmall" style="width:25%; float:left;">
+												<span class="icon solid alt major fa-paper-plane" style="background:#484542;"></span>
+												<p><a href="#none" onclick="alert('이메일 tok_o@naver.com 로 이메일 발신부탁드립니다.');" style="color:white;">E-mail</a></p>
+												<h5>Contact us by E-mail</h5>
 											</section>
-										</div>
+										</div><br/><br/>
 									</div>
 								</section>
 							</div>
