--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,12 +3,12 @@
     <th:block th:fragment="footerFragment">
         <footer id="footer">
             <ul class="icons">
-                <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-                <li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-                <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-                <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+                <li><a href="https://twitter.com/" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="www.facebook.com" target="_blank" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+                <li><a href="www.linkedin.com" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                <li><a href="www.instagram.com" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+                <li><a href="https://github.com/EllyKwon" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="https://www.google.com/intl/ko/gmail/about/" target="_blank" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
             </ul>
             <ul class="copyright">
                 <li>(주) YZ Tour</li>
