--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,15 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <th:block th:fragment="headerFragment">
         <header id="header">
-            <h1 id="logo"><a href="/index">당신의 여행파트너, YZ Tour</a></h1>
+            <h1 id="logo"><a th:href="@{/}">당신의 여행파트너, YZ Tour</a></h1>
             <nav id="nav">
                 <ul>
-                    <li><a href="/index">메인</a></li>
+                    <li><a th:href="@{/}">메인</a></li>
                     <li>
                         <a href="#">예약하기</a>
                         <ul>
-                            <li><a href="/local">국내패키지상품</a></li>
-                            <li><a href="/overseas">해외패키지상품</a></li>
+                            <li><a th:href="@{/local}">국내패키지상품</a></li>
+                            <li><a th:href="@{/overseas}">해외패키지상품</a></li>
                             <li>
                                 <a href="#">Submenu</a>
                                 <ul>
@@ -23,18 +23,18 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="/mypage">마이페이지</a>
+                        <a th:href="@{/mypage}">마이페이지</a>
                         <ul>
-                            <li><a href="/mypage">내가입정보</a></li>
-                            <li><a href="mypage/mylist">내가 쓴글</a></li>
-                            <li><a href="/mypage/reserve">예약확인 / 취소</a></li>
+                            <li><a th:href="@{/mypage}">내가입정보</a></li>
+                            <li><a th:href="@{/mypage/mylist}">내가 쓴글</a></li>
+                            <li><a th:href="@{/mypage/myreserve}">예약확인 / 취소</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="/board">고객게시판</a>
+                        <a th:href="@{/board}">고객게시판</a>
                     </li>
-                    <li><a href="/login" class="button primary small">로그인</a></li>
-                    <li><a href="/join" class="button primary small">회원가입</a></li>
+                    <li><a th:href="@{/login}" class="button primary small">로그인</a></li>
+                    <li><a th:href="@{/join}" class="button primary small">회원가입</a></li>
                 </ul>
             </nav>
         </header>
