--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,34 +1,34 @@
 <!DOCTYPE HTML>
 <html lang="ko" xmlns="http://www.w3.org/1999/html" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/layout">
+    <head>
+        <title>YZ Tour : 로그인</title>
+    </head>
 <th:block layout:fragment="content">
-<head>
-    <title>YZ Tour : 로그인</title>
-</head>
-<body class="is-preload">
-    <div id="page-wrapper">
-        <!-- Main -->
-        <div id="main" class="wrapper style1">
-            <div class="container" align="center" style="background:#29292e;border-radius:50px;"><br/>
-                <header class="major">
-                <h2 style="margin:0;">로그인</h2>
-                </header><br/>
-                            <form action="index" method="post">
-                                <input type="text" name="id" size="2" placeholder="아이디를 입력하세요" maxlength="10" style="width:40%;" required>
-                                <input type="password" name="pwd" size="2" placeholder="비밀번호 8자리를 입력하세요" maxlength="8" style="width:40%;" required><br/>
+    <body class="is-preload">
+        <div id="page-wrapper">
+            <!-- Main -->
+            <div id="main" class="wrapper style1">
+                <div class="container" align="center" style="background:#29292e;border-radius:50px;"><br/>
+                    <header class="major">
+                    <h2 style="margin:0;">로그인</h2>
+                    </header><br/>
+                                <form action="index" method="post">
+                                    <input type="text" name="id" size="2" placeholder="아이디를 입력하세요" maxlength="10" style="width:40%;" required>
+                                    <input type="password" name="pwd" size="2" placeholder="비밀번호 8자리를 입력하세요" maxlength="8" style="width:40%;" required><br/>
 
-                                <div class="col-6 col-12-medium">
-                                    <input type="checkbox" id="human" name="human" checked>
-                                    <label for="human" >아이디 저장</label>　　　　　　　　　　　　　　　　　　　
-                                </div><br/>
-                                <input class="button primary small" type="submit" value="로그인" >
-                                <input type="button" class="button small" value="취소" onclick="history.back(-1);">
-                            </form>
-                            <a href="">아이디 찾기</a> ㅣ
-                            <a href="">비밀번호 찾기</a> ㅣ
-                            <a href="">회원가입</a><br/><br/><br/>
-            </div><br/><br/><br/><br/>
+                                    <div class="col-6 col-12-medium">
+                                        <input type="checkbox" id="human" name="human" >
+                                        <label for="human" >아이디 저장</label>　　　　　　　　　　　　　　　　　　　
+                                    </div><br/>
+                                    <input class="button primary small" type="submit" value="로그인" >
+                                    <input type="button" class="button small" value="취소" onclick="history.back(-1);">
+                                </form>
+                                <a href="">아이디 찾기</a> ㅣ
+                                <a href="">비밀번호 찾기</a> ㅣ
+                                <a href="">회원가입</a><br/><br/><br/>
+                </div><br/><br/><br/><br/>
+            </div>
         </div>
-    </div>
-</body>
+    </body>
 </th:block>
 </html>
