--- a/src/main/resources/templates/reserve.html
+++ b/src/main/resources/templates/reserve.html
@@ -1,47 +1,43 @@
 <!DOCTYPE HTML>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	  layout:decorate="layout/layout" xmlns="http://www.w3.org/1999/html">
-<head>
-	<title>YZ Tour : 패키지예약 </title>
-		<style>
-			details { margin:5px 0 10px; }
-			details > summary { background:#444; color:#fff; padding:10px; outline:0; border-radius:5px; cursor:pointer; transition:background 0.5s; text-align:left; box-shadow: 1px 1px 2px gray;}
-			details > summary::-webkit-details-marker { background:#444; color:#fff; background-size:contain; transform:rotate3d(0, 0, 1, 90deg); transition:transform 0.25s;}
-			details[open] > summary::-webkit-details-marker { transform:rotate3d(0, 0, 1, 180deg);}
-			details[open] > summary { background:#444;}
-			details[open] > summary ~ * { animation:reveal 0.5s;}
-			.tpt { background:#444; color:#fff; margin:5px 0 10px; padding:5px 10px; line-height:25px; border-radius:5px; box-shadow: 1px 1px 2px gray;}
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/layout" xmlns="http://www.w3.org/1999/html">
+	<head>
+		<title>YZ Tour : 패키지예약 </title>
+			<style>
+				details { margin:5px 0 10px; }
+				details > summary { background:#444; color:#fff; padding:10px; outline:0; border-radius:5px; cursor:pointer; transition:background 0.5s; text-align:left; box-shadow: 1px 1px 2px gray;}
+				details > summary::-webkit-details-marker { background:#444; color:#fff; background-size:contain; transform:rotate3d(0, 0, 1, 90deg); transition:transform 0.25s;}
+				details[open] > summary::-webkit-details-marker { transform:rotate3d(0, 0, 1, 180deg);}
+				details[open] > summary { background:#444;}
+				details[open] > summary ~ * { animation:reveal 0.5s;}
+				.tpt { background:#444; color:#fff; margin:5px 0 10px; padding:5px 10px; line-height:25px; border-radius:5px; box-shadow: 1px 1px 2px gray;}
 
-			@keyframes reveal {
-				from { opacity:0; transform:translate3d(0, -30px, 0); }
-				to { opacity:1; transform:translate3d(0, 0, 0); }
+				@keyframes reveal {
+					from { opacity:0; transform:translate3d(0, -30px, 0); }
+					to { opacity:1; transform:translate3d(0, 0, 0); }
+				}
+			</style>
+
+		<script type="text/javascript">
+			var bDisplay=true; function doDisplay(){
+				var con = document.getElementById("wrap");
+				if(con.style.display=='none'){
+					con.style.display = 'block';
+				}else{
+					con.style.display = 'none';
+				}
 			}
-		</style>
+		</script>
 
-	<script type="text/javascript">
-		var bDisplay=true; function doDisplay(){
-			var con = document.getElementById("wrap");
-			if(con.style.display=='none'){
-				con.style.display = 'block';
-			}else{
-				con.style.display = 'none';
-			}
-		}
-	</script>
-
-	<link href="/calendar/assets/css/fullcalendar.css" rel='stylesheet' />
-	<link href="/calendar/assets/css/fullcalendar.print.css" rel='stylesheet' media='print' />
-	<script src="/calendar/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-	<script src="/calendar/assets/js/jquery-ui.custom.min.js" type="text/javascript"></script>
-	<script src="/calendar/assets/js/fullcalendar.js" type="text/javascript"></script>
-
-</head>
-
+		<link href="/calendar/assets/css/fullcalendar.css" rel='stylesheet' />
+		<link href="/calendar/assets/css/fullcalendar.print.css" rel='stylesheet' media='print' />
+		<script src="/calendar/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+		<script src="/calendar/assets/js/jquery-ui.custom.min.js" type="text/javascript"></script>
+		<script src="/calendar/assets/js/fullcalendar.js" type="text/javascript"></script>
+	</head>
 <th:block layout:fragment="content">
 	<body class="is-preload">
 		<div id="page-wrapper">
 			<!-- Header -->
-
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
@@ -71,65 +67,25 @@
 								<div class="col-8 col-12-medium imp-medium">
 									<blockquote style="padding:0"><h4>　판매중인 해외패키지</h4></blockquote>
 									<hr/>
-										<div class="box alt" >
+										<div class="box alt" style="background:#29292e;border-radius:50px;">
 											<div class="row gtr-50 gtr-uniform" >
-												<section>
+												<section style="margin-left:1em;">
 													<h6>#베트남다낭</h6>
-													<p><span class="image left"><img src="images/danang.jpg" alt="" /></span>
-														<span class="image left"><img src="images/danang2.jpg" alt="" /></span>
-														<span class="image left"><img src="images/oldtown.jpg" alt="" /></span>
-														<span class="image left"><img src="images/dragonbridge.jpg" alt="" /></span></p><br/>
+													<p><span class="image left"><img src="/images/danang.jpg" alt="" /></span>
+														<span class="image left"><img src="/images/danang2.jpg" alt="" /></span>
+														<span class="image left"><img src="/images/oldtown.jpg" alt="" /></span>
+														<span class="image left"><img src="/images/dragonbridge.jpg" alt="" /></span></p><br/>
 												</section>
-												<span>베트남다낭 / 3박4일 / 호텔4성급 / 쇼핑3회 / 가이드있음 / #관광</span>　　　　　　　　
+
+												<span>　베트남다낭 / 3박4일 / 호텔4성급 / 쇼핑3회 / 가이드있음 / #관광</span>　　　　　　　
 												<div><h3>410,000 원</h3></div>
-												<span>#미케비치 / #다나힐 / #호이안 / #올드 타운 / #다낭 대성당</span>　　　　　　　　
+												<span>　#미케비치 / #다나힐 / #호이안 / #올드 타운 / #다낭 대성당</span>　　　　　　　
 
-
-												<!--<details>
-													<summary>가능예약일보기</summary>-->
 												<div><a href="javascript:doDisplay();" class="button primary small">가능예약일보기</a></div>
-
-												<!--</details>-->
-
-
-
-												<!--<div class="col-8 col-12-medium imp-medium">
-													<a href="#none" class="button small">판매상품보기</a>
-												</div>
-												<div id='wrap' style="display:block;">
-													<div id='calendar'></div>
-													<div style='clear:both'></div>
-												</div>-->
-
-											</div>
+											</div><br/>
 										</div>
 
 									<div id="wrap" >
-                                    	<!--<div id="calendar" class="fc fc-1tr">
-                                            <table class="fc-header" style="width:100%">
-                                                <tbody>
-                                                <tr>
-                                                    <td class="fc-header-left">
-                                                        <span class="fc-header-title">
-                                                            <h2>December 2022</h2>
-                                                        </span>
-                                                    </td>
-                                                    <td class="fc-header-center">
-                                                        <span class="fc-button fc-button-agendaDay fc-state-default fc-corner-left" unselectable="on">day</span>
-                                                        <span class="fc-button fc-button-agendaWeek fc-state-default" unselectable="on">week</span>
-                                                        <span class="fc-button fc-button-month fc-state-default fc-corner-right fc-state-active" unselectable="on">month</span>
-                                                    </td>
-                                                    <td class="fc-header-right">
-                                                        <span class="fc-button fc-button-prev fc-state-default fc-corner-left" unselectable="on">
-                                                            <span class="fc-text-arrow"> < </span>
-                                                        </span>
-                                                    </td>
-                                                </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                        <div style="clear:both"></div>
-                                        <div>달력나옴2</div>-->
 										<div id="calendar" class="fc fc-ltr">
 											<table class="fc-header" style="width:100%">
 												<tbody>
@@ -546,80 +502,80 @@
 									</div>
 
 									<hr/>
-									<div class="box alt">
+									<div class="box alt" style="background:#29292e;border-radius:50px;">
 										<div class="row gtr-50 gtr-uniform" >
-											<section>
+											<section style="margin-left:1em;">
 												<h6>#일본 오사카</h6>
-												<p><span class="image left"><img src="images/osaka.jpg" alt="" /></span>
-													<span class="image left"><img src="images/osakacastle.jpg" alt="" /></span>
-													<span class="image left"><img src="images/univarsal.jpg" alt="" /></span>
-													<span class="image left"><img src="images/tsutenkaku.jpg" alt="" /></span></p><br/>
+												<p><span class="image left"><img src="/images/osaka.jpg" alt="" /></span>
+													<span class="image left"><img src="/images/osakacastle.jpg" alt="" /></span>
+													<span class="image left"><img src="/images/univarsal.jpg" alt="" /></span>
+													<span class="image left"><img src="/images/tsutenkaku.jpg" alt="" /></span></p><br/>
 											</section>
-											<span>일본 오사카 / 3박4일 / 호텔4성급 / 쇼핑4회 / 가이드있음 / #관광</span>　　　　　　　　　
+											<span>　일본 오사카 / 3박4일 / 호텔4성급 / 쇼핑4회 / 가이드있음 / #관광</span>　　　　　　　
 											<div><h3>500,000 원</h3></div>
-											<span>#오사카성/ #유니버셜스튜디오 / #도톤보리 / #가이유칸 / #쓰텐가쿠</span>　　　　　
+											<span>　#오사카성/ #유니버셜스튜디오 / #도톤보리 / #가이유칸 / #쓰텐가쿠</span>　　　
 
 											<div class="btn_tab_image" id="btn_tab_image2">
 												<a href="#none" onclick="foldLeftmenu();" class="button primary small">가능예약일보기</a>
 											</div>
-										</div>
+										</div><br/>
 									</div>
 									<hr/>
-									<div class="box alt">
+									<div class="box alt" style="background:#29292e;border-radius:50px;">
 										<div class="row gtr-50 gtr-uniform" >
-											<section>
+											<section style="margin-left:1em;">
 												<h6>#필리핀 보라카이</h6>
-												<p><span class="image left"><img src="images/bora.jpg" alt="" /></span>
-													<span class="image left"><img src="images/boracaybeach.jpg" alt="" /></span>
-													<span class="image left"><img src="images/dmall.jpg" alt="" /></span>
-													<span class="image left"><img src="images/willysrock.jpg" alt="" /></span></p><br/>
+												<p><span class="image left"><img src="/images/bora.jpg" alt="" /></span>
+													<span class="image left"><img src="/images/boracaybeach.jpg" alt="" /></span>
+													<span class="image left"><img src="/images/dmall.jpg" alt="" /></span>
+													<span class="image left"><img src="/images/willysrock.jpg" alt="" /></span></p><br/>
 											</section>
-											<span>필리핀 보라카이 / 1주일 / 호텔4성급 / 쇼핑7회 / 가이드있음 / #관광</span>　　　　　　　　
+											<span>　필리핀 보라카이 / 1주일 / 호텔4성급 / 쇼핑7회 / 가이드있음 / #관광</span>　　　　　　
 											<div><h3>933,400 원</h3></div>
-											<span>#화이트비치/ #아리엘포인트 / #푸카쉘비치 / #윌리스락 / #디몰</span>　　　　　　　
+											<span>　#화이트비치/ #아리엘포인트 / #푸카쉘비치 / #윌리스락 / #디몰</span>　　　　　
 
 											<div class="btn_tab_image" id="btn_tab_image3">
 												<a href="#" onclick="foldLeftmenu();" class="button primary small">가능예약일보기</a>
 											</div>
-										</div>
+										</div><br/>
 									</div>
 									<hr/>
-									<div class="box alt">
+									<div class="box alt" style="background:#29292e;border-radius:50px;">
 										<div class="row gtr-50 gtr-uniform" >
-											<section>
+											<section style="margin-left:1em;">
 												<h6>#싱가포르</h6>
-												<p><span class="image left"><img src="images/singapore.jpg" alt="" /></span>
-													<span class="image left"><img src="images/gardenbythebay.jpg" alt="" /></span>
-													<span class="image left"><img src="images/museum.jpg" alt="" /></span>
-													<span class="image left"><img src="images/orchardroad.jpg" alt="" /></span></p><br/>
+												<p><span class="image left"><img src="/images/singapore.jpg" alt="" /></span>
+													<span class="image left"><img src="/images/gardenbythebay.jpg" alt="" /></span>
+													<span class="image left"><img src="/images/museum.jpg" alt="" /></span>
+													<span class="image left"><img src="/images/orchardroad.jpg" alt="" /></span></p><br/>
 											</section>
-											<span>싱가포르 / 4박5일 / 호텔 5성급 / 쇼핑4회 / 가이드있음 / #관광</span>　　　　　　　　　
+											<span>　싱가포르 / 4박5일 / 호텔 5성급 / 쇼핑4회 / 가이드있음 / #관광</span>　　　　　　　
 											<div><h3>1,270,000 원</h3></div>
-											<span>#가든스 바이 더베이 / #보타닉가든 / #오차드 로드 / #아트사이언스 뮤지엄</span>　　
+											<span>　#가든스 바이 더베이 / #보타닉가든 / #오차드 로드 / #아트사이언스 뮤지엄</span>
 
 											<div class="btn_tab_image" id="btn_tab_image4">
 												<a href="#" onclick="foldLeftmenu();" class="button primary small">가능예약일보기</a>
 											</div>
-										</div>
+										</div><br/>
 									</div>
 									<hr/>
-									<div class="box alt">
+									<div class="box alt" style="background:#29292e;border-radius:50px;">
 										<div class="row gtr-50 gtr-uniform" >
-											<section>
+											<section style="margin-left:1em;">
 												<h6>#괌</h6>
-												<p><span class="image left"><img src="images/guam.jpg" alt="" /></span>
-													<span class="image left"><img src="images/guamcliff.jpg" alt="" /></span>
-													<span class="image left"><img src="images/guam2.jpg" alt="" /></span>
-													<span class="image left"><img src="images/charmorro.jpg" alt="" /></span></p><br/>
+												<p><span class="image left"><img src="/images/guam.jpg" alt="" /></span>
+													<span class="image left"><img src="/images/guamcliff.jpg" alt="" /></span>
+													<span class="image left"><img src="/images/guam2.jpg" alt="" /></span>
+													<span class="image left"><img src="/images/charmorro.jpg" alt="" /></span></p><br/>
 											</section>
-											<span>괌 / 1주일 / 호텔5성급 / 쇼핑7회 / 가이드있음 / #관광</span>　　　　　　　　　　　　　
+											<span>　괌 / 1주일 / 호텔5성급 / 쇼핑7회 / 가이드있음 / #관광</span>　　　　　　　　　　　
 											<div><h3>1,610,000 원</h3></div>
-											<span>#이파오비치 공원 / #차모르 야시장 / #사랑의 절벽 / #투몬 비치</span>　　　　　　　
+											<span>　#이파오비치 공원 / #차모르 야시장 / #사랑의 절벽 / #투몬 비치</span>　　　　　
 
 											<div class="btn_tab_image" id="btn_tab_image">
 												<a href="#" onclick="foldLeftmenu();" class="button primary small">가능예약일보기</a>
 											</div>
-										</div>
+										</div><br/>
 									</div><hr/>
 								</div>
 							</div>
